--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
     <p class="author">Ruben Verborgh</p>
   </div>
 
+  <div class="text slide" id="quote">
+    <blockquote>
+      <p>
+        In order to simplify,<br>
+        one must complexify,<br>
+        <i>i.e.</i>, see simple things<br>
+        in the complex plane.
+      </p>
+      <cite><del>Benoît Mandelbrot</del></cite>
+    </blockquote>
+  </div>
+
   <footer>
     <p class="badge"><a href="https://github.com/RubenVerborgh/RDF-for-Solid-2022">View on GitHub</a></p>
     <p class="license">
