--- a/index.html
+++ b/index.html
@@ -36,6 +36,46 @@
     </blockquote>
   </div>
 
+  <div class="toc slide" id="toc">
+    <ul>
+      <li><a href="#toc-rdf">RDF &amp; Solid</a></li>
+      <li><a href="#toc-reasoning">Reasoning</a></li>
+      <li><a href="#toc-querying">Querying</a></li>
+    </ul>
+  </div>
+
+  <div class="toc slide" id="toc-rdf">
+    <ul>
+      <li class="current"><a href="#toc-rdf">RDF &amp; Solid</a></li>
+      <li><a href="#toc-reasoning">Reasoning</a></li>
+      <li><a href="#toc-querying">Querying</a></li>
+    </ul>
+  </div>
+
+  <div class="toc slide" id="toc-reasoning">
+    <ul>
+      <li><a href="#toc-rdf">RDF &amp; Solid</a></li>
+      <li class="current"><a href="#toc-reasoning">Reasoning</a></li>
+      <li><a href="#toc-querying">Querying</a></li>
+    </ul>
+  </div>
+
+  <div class="toc slide" id="toc-querying">
+    <ul>
+      <li><a href="#toc-rdf">RDF &amp; Solid</a></li>
+      <li><a href="#toc-reasoning">Reasoning</a></li>
+      <li class="current"><a href="#toc-querying">Querying</a></li>
+    </ul>
+  </div>
+
+  <div class="toc slide" id="recap">
+    <ul>
+      <li><a href="#toc-rdf">RDF &amp; Solid</a></li>
+      <li><a href="#toc-reasoning">Reasoning</a></li>
+      <li><a href="#toc-querying">Querying</a></li>
+    </ul>
+  </div>
+
   <footer>
     <p class="badge"><a href="https://github.com/RubenVerborgh/RDF-for-Solid-2022">View on GitHub</a></p>
     <p class="license">
