Add Dan and Libby quote.

--- a/index.html
+++ b/index.html
@@ -28,11 +28,27 @@
     <blockquote>
       <p>
         In order to simplify,<br>
-        one must complexify,<br>
+        one must complexify<span class="next">,<br>
         <i>i.e.</i>, see simple things<br>
-        in the complex plane.
+        in the complex plane.</span>
       </p>
       <cite><del>Benoît Mandelbrot</del></cite>
+    </blockquote>
+  </div>
+
+  <div class="slide" id="complicated">
+    <blockquote>
+      <p class="next">
+        People think RDF is a pain<br>
+        <span class="next">because it is complicated.</span><br>
+        <span class="next">The truth is even worse.</span>
+      </p>
+      <p class="next">
+        RDF is painfully simplistic,<br>
+        <span class="next">but it allows you to work with real-world data<br>
+        and problems that are horribly complicated.</span>
+      </p>
+      <cite><a href="https://book.validatingrdf.com/bookHtml005.html">Dan Brickley &amp; Libby Miller</a></cite>
     </blockquote>
   </div>
 
