Add Dieter DP quote.

--- a/index.html
+++ b/index.html
@@ -24,8 +24,23 @@
     <p class="author">Ruben Verborgh</p>
   </div>
 
+  <div class="text slide" id="letters">
+    <blockquote class="large">
+      <p>
+        I used to like math, until<br>
+        the numbers were being<br>
+        outnumbered by letters.
+      </p>
+      <p class="next">
+        And then the letters<br>
+        started having letters.
+      </p>
+      <cite>Dieter DP</cite>
+    </blockquote>
+  </div>
+
   <div class="text slide" id="simplify-complexify">
-    <blockquote>
+    <blockquote class="large">
       <p>
         In order to simplify,<br>
         one must complexify<span class="next">,<br>
