Add Mandelbrot source.

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <i>i.e.</i>, see simple things<br>
         in the complex plane.</span>
       </p>
-      <cite><del>Benoît Mandelbrot</del></cite>
+      <cite><a href="https://math.stackexchange.com/questions/4495367/origin-of-quote-in-order-to-simplify">Gaston Julia (as quoted by Benoît Mandelbrot)</a></cite>
     </blockquote>
   </div>
 
