--- a/index.html
+++ b/index.html
@@ -1215,6 +1215,103 @@ ex:hasSpouse a owl:FunctionalProperty.</code></pre>
     </h2>
   </div>
 
+  <div class="slide" id="sparql-language-protocol">
+    <h2>
+      <a href="https://www.w3.org/TR/sparql11-overview/">SPARQL Protocol And RDF Query Language</a>:
+      enable querying &amp; updating RDF datasets.
+    </h2>
+    <ul>
+      <li class="next">
+        <a href="#sparql-query-forms">SPARQL</a> is a query language.
+        <ul>
+          <li>Select specific data from an RDF dataset.</li>
+          <li>Insert, change, or delete data in an RDF dataset.</li>
+        </ul>
+      </li>
+      <li class="next">
+        The <a href="#sparql-protocol">SPARQL protocol</a>
+        is a <a href="../web-apis/#definition">Web API</a> definition<br>
+        for querying in the SPARQL language over HTTP.
+        <ul>
+          <li>
+            A <em>SPARQL endpoint</em> executes SPARQL queries sent by clients<br>
+            through HTTP, and replies with their results.
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+
+  <div class="slide" id="sparql-select-example">
+    <h2>
+      This query finds artists<br>
+      influenced by Picasso.
+    </h2>
+    <pre><code><span class="comment">PREFIX dbr: &lt;http://dbpedia.org/resource/&gt;</span>
+<span class="comment">PREFIX dbo: &lt;http://dbpedia.org/ontology/&gt;</span>
+SELECT ?name ?person WHERE {
+  ?person a dbo:Artist.
+  ?person foaf:name ?name.
+  ?person dbo:influencedBy dbr:Pablo_Picasso.
+}</code></pre>
+  </div>
+
+  <div class="slide" id="sparql-select-evaluation">
+    <h2>
+      A query engine will try to find mappings<br>
+      such that the entire BGP is satisfied.
+    </h2>
+    <p>
+      When the mappings are substituted in the BGP,<br>
+      the dataset should contain triples as follows:
+    </p>
+    <ul>
+      <li><code>?person a dbo:Artist.</code></li>
+      <li><code>?person foaf:name ?name.</code></li>
+      <li><code>?person dbo:influencedBy dbr:Pablo_Picasso.</code></li>
+    </ul>
+  </div>
+
+  <div class="slide" id="sparql-select-client">
+    <h2>
+      This <code>SELECT</code> query finds<br>
+      artists influenced by Picasso.
+    </h2>
+    <iframe class="query-client" src="query-client/#datasources=https%3A%2F%2Ffragments.dbpedia.org%2F2016-04%2Fen&query=SELECT%20%3Fname%20%3Fperson%20WHERE%20%7B%0A%20%20%3Fperson%20a%20dbo%3AArtist.%0A%20%20%3Fperson%20foaf%3Aname%20%3Fname.%0A%20%20%3Fperson%20dbo%3AinfluencedBy%20dbp%3APablo_Picasso.%0A%7D"></iframe>
+  </div>
+
+  <div class="slide" id="sparql-construct-client">
+    <h2>
+      A <code>CONSTRUCT</code> query<br>
+      returns matching triples.
+    </h2>
+    <iframe class="query-client" src="query-client/#datasources=https%3A%2F%2Ffragments.dbpedia.org%2F2016-04%2Fen&query=CONSTRUCT%20WHERE%20%7B%0A%20%20%3Fperson%20a%20dbo%3AArtist.%0A%20%20%3Fperson%20foaf%3Aname%20%3Fname.%0A%20%20%3Fperson%20dbo%3AinfluencedBy%20dbp%3APablo_Picasso.%0A%7D"></iframe>
+  </div>
+
+  <div class="slide" id="sparql-ask-client">
+    <h2>
+      An <code>ASK</code> query returns a boolean stating<br>
+      whether the pattern exists in the dataset.
+    </h2>
+    <iframe class="query-client" src="query-client/#datasources=https%3A%2F%2Ffragments.dbpedia.org%2F2016-04%2Fen&query=ASK%20WHERE%20%7B%0A%20%20%3Fperson%20a%20dbo%3AArtist.%0A%20%20%3Fperson%20foaf%3Aname%20%3Fname.%0A%20%20%3Fperson%20dbo%3AinfluencedBy%20dbp%3APablo_Picasso.%0A%7D"></iframe>
+  </div>
+
+  <div class="slide" id="sparql-describe-client">
+    <h2>
+      A <code>DESCRIBE</code> query returns (non-specified)<br>
+      contextual information for resources.
+    </h2>
+    <iframe class="query-client" src="query-client/#datasources=https%3A%2F%2Ffragments.dbpedia.org%2F2016-04%2Fen&query=DESCRIBE%20%3Fperson%20WHERE%20%7B%0A%20%20%3Fperson%20foaf%3Aname%20%22Pablo%20Picasso%22%40en.%0A%7D"></iframe>
+  </div>
+
+  <div class="slide" id="sparql-modifiers-example">
+    <h2>
+      In addition to only BGPs,<br>
+      SPARQL queries can contain <em>modifiers</em>.
+    </h2>
+    <iframe class="query-client" src="query-client/#datasources=https%3A%2F%2Ffragments.dbpedia.org%2F2016-04%2Fen&query=SELECT%20%3Fname%20%3Fperson%20%3Fspouse%20WHERE%20%7B%0A%20%20%3Fperson%20rdfs%3Alabel%20%3Fname.%0A%20%20%3Fperson%20dbo%3AinfluencedBy%20dbp%3APablo_Picasso.%0A%20%20OPTIONAL%20%7B%20%3Fperson%20dbo%3Aspouse%20%3Fspouse.%20%7D%0A%20%20FILTER%20LANGMATCHES(LANG(%3Fname)%2C%20%22EN%22)%0A%7D%0ALIMIT%2010"></iframe>
+  </div>
+
   <div class="toc slide" id="recap">
     <ul>
       <li><a href="#toc-rdf">RDF &amp; Solid</a></li>
