--- a/index.html
+++ b/index.html
@@ -24,9 +24,19 @@
     <p class="author">Ruben Verborgh</p>
   </div>
 
-  <div class="text slide" id="letters">
+  <div class="text slide" id="why-rdf">
+    <h2>
+      Why do we use RDF<br>
+      within Solid?
+    </h2>
+    <p class="next">
+      Surely there must be something easier.
+    </p>
+  </div>
+
+  <div class="slide" id="letters">
     <blockquote class="large">
-      <p>
+      <p class="next">
         I used to like math, until<br>
         the numbers were being<br>
         outnumbered by letters.
@@ -39,7 +49,78 @@
     </blockquote>
   </div>
 
-  <div class="text slide" id="simplify-complexify">
+  <div class="formula slide" id="formula-symbols">
+    <p>
+      💰 🍎🍏 📦
+    </p>
+    <p class="next">
+      I bought a crate of apples for £20<br>
+      and just sold 6 apples for £5 each.<br>
+      <strong>What is my profit?</strong>
+    </p>
+  </div>
+
+  <div class="formula slide" id="formula-numbers">
+    <p>
+      10 = 5 ⋅ 6 − 20
+    </p>
+    <p class="next">
+      This solves buying a crate of apples for £20<br>
+      and selling 6 apples for £5 each.
+    </p>
+  </div>
+
+  <div class="formula slide" id="formula-letters">
+    <p>
+      f(<var>x</var>) = 5 <var>x</var> − 20
+    </p>
+    <p class="next">
+      This solves selling an arbitrary number of apples,<br>
+      and even half an apple or negative apples due to loss.
+    </p>
+  </div>
+
+  <div class="formula slide" id="formula-more-letters">
+    <p>
+      f(<var>x</var>) = <var>a</var> <var>x</var> + <var>b</var>
+    </p>
+    <p class="next">
+      This solves selling arbitrary numbers of anything,<br>
+      and whole other kinds of problems.
+    </p>
+  </div>
+
+  <div class="formula slide" id="letters-problem">
+    <h2>
+      Are the letters <em>really</em><br>
+      the difficulty here?
+    </h2>
+    <ul>
+      <li class="next">
+        The letters make
+        <span class="formula">f(<var>x</var>) = <var>a</var> <var>x</var> + <var>b</var></span>
+        arguably<br> more complex
+        than <span class="formula">10 = 5 ⋅ 6 − 20</span>.
+      </li>
+      <li class="next">
+        However,
+        <span class="formula">f(<var>x</var>) = <var>a</var> <var>x</var> + <var>b</var></span>
+        actually<br> covers a much larger problem space.
+        <ul>
+          <li>
+            So the difficulty is <strong>not</strong> the letters,<br>
+            but the <em>increased problem space</em>.
+          </li>
+        </ul>
+      </li>
+      <li class="next">
+        In fact, <strong>the letters <em>help</em> us</strong> to<br>
+        tackle more difficult problems!
+      </li>
+    </ul>
+  </div>
+
+  <div class="slide" id="simplify-complexify">
     <blockquote class="large">
       <p>
         In order to simplify,<br>
@@ -49,6 +130,47 @@
       </p>
       <cite><a href="https://math.stackexchange.com/questions/4495367/origin-of-quote-in-order-to-simplify">Gaston Julia (as quoted by Benoît Mandelbrot)</a></cite>
     </blockquote>
+  </div>
+
+  <div class="slide" id="complexities">
+    <h2>
+      A well-designed complexity<br>
+      brings additional simplicity.
+    </h2>
+    <p>What happened to good old natural numbers?</p>
+    <ul class="next">
+      <li>
+        Fractions are absurd—I only have whole apples!
+        <ul>
+          <li class="next">
+            Well now you can sell halves.
+          </li>
+        </ul>
+      </li>
+      <li>
+        Negative numbers are absurd—no negative coins!
+        <ul>
+          <li class="next">
+            Well now you can be in debt.
+          </li>
+        </ul>
+      </li>
+      <li>
+        Complex numbers are absurd—there’s no <var>i</var> apples.
+        <ul>
+          <li class="next">
+            Well now any <var>n</var><sup>th</sup>-degree polynomial
+            has exactly <var>n</var> solutions.
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+
+  <div class="text slide" id="rdf-problem">
+    <h2>
+      So is RDF <em>really</em><br> the difficulty here?<br>
+    </h2>
   </div>
 
   <div class="slide" id="complicated">
